main/sample-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-web
  annotations:
    platform.chucthien.com/ingress: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-web
  ports:
    - name: http
      port: 80
      targetPort: http
